Hashtag and Mention perfected, timeago also fixed

--- a/timeline.html
+++ b/timeline.html
@@ -244,7 +244,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Darrell</h5>
-                  <span>10 secs ago</span>
+                  <span>10s ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
@@ -348,7 +348,7 @@
                       <span>4.0</span>
                     </div>
                   </h5>
-                  <span>10 secs ago</span>
+                  <span>10m ago</span>
                 </div>
                 <p>
                   Great place to work with the good work culture and people
@@ -455,7 +455,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Savannah</h5>
-                  <span>10 secs ago</span>
+                  <span>10s ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
@@ -559,7 +559,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Eduardo</h5>
-                  <span>10 secs ago</span>
+                  <span>10d ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
@@ -794,7 +794,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Darrell</h5>
-                  <span>10 secs ago</span>
+                  <span>10y ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
@@ -899,7 +899,7 @@
                       <span>4.0</span>
                     </div>
                   </h5>
-                  <span>10 secs ago</span>
+                  <span>10m ago</span>
                 </div>
                 <p>
                   Great place to work with the good work culture and people
@@ -1006,7 +1006,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Savannah</h5>
-                  <span>10 secs ago</span>
+                  <span>10m ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
@@ -1110,7 +1110,7 @@
               <div class="blab-info">
                 <div class="blab-info-top">
                   <h5>Eduardo</h5>
-                  <span>10 secs ago</span>
+                  <span>10y ago</span>
                 </div>
                 <p>
                   Our firm is a long established fact that a reader will be
