Send button added to comment

--- a/timeline-user-page.html
+++ b/timeline-user-page.html
@@ -284,6 +284,7 @@
                         placeholder="comment"
                         class="commentMsg"
                       ></textarea>
+                      <button type="button" class="comment-btn">Send</button>
                     </div>
                     <div class="comment-count"><span>0</span>/150</div>
                   </div>
