Homepage issues fixed

--- a/timeline-user-page.html
+++ b/timeline-user-page.html
@@ -190,7 +190,12 @@
           </div>
         </div>
         <div class="col-lg-6 middleDiv">
-          <div class="nav-back"><i class="fa fa-arrow-left"></i></div>
+          <div class="subnav-header">
+            <div class="nav-back">
+              <i class="fa fa-arrow-left"></i>
+            </div>
+            <span>Follow people of same interest</span>
+          </div>
           <div class="blab">
             <div class="blab-content">
               <div class="blab-img">
