--- a/timeline.html
+++ b/timeline.html
@@ -281,11 +281,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -369,11 +371,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -448,11 +452,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -610,11 +616,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -684,11 +692,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -772,11 +782,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -851,11 +863,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1013,11 +1027,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1087,11 +1103,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1175,11 +1193,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1254,11 +1274,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1416,11 +1438,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1490,11 +1514,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1578,11 +1604,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1657,11 +1685,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
 
@@ -1819,11 +1849,13 @@
               <div class="comment-img">
                 <img src="assets/images/Ellipse 3.png" alt="" />
               </div>
-              <div class="comment-msg">
+              <div class="comment-msg-container">
+                <div class="comment-msg">
                 <textarea name="" cols="30" rows="2" placeholder="comment" class="commentMsg"></textarea>
-                <button type="button" class="comment-btn">Send</button>
+                <button type="button" class="comment-btn"><img src="assets/images/share-comment-icon.svg" alt="" srcset=""></button>
               </div>
-              <div class="comment-count"><span>0</span>/150</div>
+              <div class="comment-count"><span>150</span> characters remaining</div>
+              </div>
             </div>
           </div>
         </div>
@@ -1946,19 +1978,61 @@
       <div class="modal-content">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         <div class="modal-body">
-          <h5 class="header">Profile Image</h5>
+          <h5 class="header">Edit your Image</h5>
           <div id="profile_img"></div>
           <ul class="toolbox">
             <li id="rotateLeft"><i class="fa fa-undo"></i></li>
             <li id="rotateRight"><i class="fa fa-redo"></i></li>
-            <li id="crop"><i class="fa fa-cloud-upload-alt"></i></li>
             <li>
               <label for="image_upload">
-                Browse
+                Choose Image
                 <input id="image_upload" type="file" accept=".jpg, .png, .jpeg" />
               </label>
             </li>
           </ul>
+          <div class="profile-switch">
+            <button type="button" class="switch">Use an avatar</button>
+            <button type="button" class="save" id="crop">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Avatar modal -->
+  <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-body">
+          <h5 class="header">Choose an avatar</h5>
+          <ul class="avatar-container">
+            <li><img src="assets/images/avatars/avatar-1.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-2.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-3.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-4.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-5.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-6.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-7.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-8.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-9.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-10.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-11.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-12.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-13.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-14.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-15.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-16.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-17.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-18.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-19.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-20.png" alt=""></li>
+          </ul>
+          <div class="profile-switch">
+            <button type="button" class="switch">Use an image</button>
+            <button type="button" class="save" id="saveAvatar">Save</button>
+          </div>
         </div>
       </div>
     </div>
@@ -2073,13 +2147,31 @@
     $(".commentMsg").on("keyup", function () {
       let dis  = $(this);
       let value = dis.val();
-      let count = value.length;
+      let count = (150 - value.length) <= 0 ? 0 : 150 - value.length;
       dis.parent().siblings(".comment-count").find('span').html(count);
 
-      if (count >= 150) {
+      if (count <= 0) {
         dis.val(value.substr(0, 150));
+        dis.parent().siblings(".comment-count").css("color","#ED0000");
       }
     });
+
+    $(".avatar-container li").click(function(){
+      $(".avatar-container li").removeClass('active');
+      $(this).addClass('active');
+    })
+
+    $(".switch").click(function(){
+      $('#profileImgModal').modal('toggle');
+      $('#avatarModal').modal('toggle');
+    });
+
+    $("#saveAvatar").click(function(){
+      const avatar = $(".avatar-container li.active img").attr("src");
+      $(".profile-img>img").attr("src", avatar);
+      $(".navbar-account>img").attr("src", avatar);
+      $('#avatarModal').modal('toggle');
+    })
 
   </script>
 </body>
