New issues fixed

--- a/timeline.html
+++ b/timeline.html
@@ -55,7 +55,7 @@
 
       <div class="navbar-account">
         <img src="assets/images/Ellipse 3.png" alt="" />
-        <i class="fa fa-caret-down"></i>
+        <span><img src="assets/images/down-arrow.png" alt=""></span>
         <ul class="account-dropdown">
           <a href="#" class="lg-hidden">
             <li>Timeline</li>
@@ -101,7 +101,7 @@
           <div class="timeline-profile">
             <div class="profile-img">
               <img src="assets/images/Ellipse 3.png" alt="" />
-              <div class="edit-pix" data-bs-toggle="modal" data-bs-target="#profileImgModal">
+              <div class="edit-pix" data-bs-toggle="modal" data-bs-target="#avatarModal">
                 <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.64801 2.80532L8.63926 3.82H10.833V9.90805H2.16634V3.82H4.36009L5.35134 2.80532H7.64801ZM8.12467 1.79065H4.87467L3.88342 2.80532H2.16634C1.57051 2.80532 1.08301 3.26193 1.08301 3.82V9.90805C1.08301 10.4661 1.57051 10.9227 2.16634 10.9227H10.833C11.4288 10.9227 11.9163 10.4661 11.9163 9.90805V3.82C11.9163 3.26193 11.4288 2.80532 10.833 2.80532H9.11592L8.12467 1.79065ZM6.49967 5.34201C7.39342 5.34201 8.12467 6.02692 8.12467 6.86402C8.12467 7.70113 7.39342 8.38604 6.49967 8.38604C5.60592 8.38604 4.87467 7.70113 4.87467 6.86402C4.87467 6.02692 5.60592 5.34201 6.49967 5.34201ZM6.49967 4.32734C5.00467 4.32734 3.79134 5.46377 3.79134 6.86402C3.79134 8.26427 5.00467 9.40071 6.49967 9.40071C7.99467 9.40071 9.20801 8.26427 9.20801 6.86402C9.20801 5.46377 7.99467 4.32734 6.49967 4.32734Z"
@@ -2002,7 +2002,7 @@
   <!-- Avatar modal -->
   <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         <div class="modal-body">
@@ -2028,6 +2028,22 @@
             <li><img src="assets/images/avatars/avatar-18.png" alt=""></li>
             <li><img src="assets/images/avatars/avatar-19.png" alt=""></li>
             <li><img src="assets/images/avatars/avatar-20.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-21.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-22.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-23.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-24.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-25.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-26.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-27.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-28.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-29.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-30.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-31.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-32.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-33.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-34.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-35.png" alt=""></li>
+            <li><img src="assets/images/avatars/avatar-36.png" alt=""></li>
           </ul>
           <div class="profile-switch">
             <button type="button" class="switch">Use an image</button>
